styles/theme/_tooltips.scss
.v-tooltip__content {
  background: $white;
  padding: $padding-small $padding-general;
  min-width: $tooltip-min-width;
  max-width: $tooltip-max-width;
  color: $gray !important;
  font-size: $font-size-small;
  font-weight: $font-weight-base;
  @include shadow-8dp();
  text-align: center;

  &:after{
    position: absolute;
    bottom: -$tooltip-border;
    height: 0;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    width: $tooltip-border;
    vertical-align: $tooltip-arrow-align;
    content: "";
  }

  &.top:after {
    border-top: $tooltip-border solid $white;
    border-right: $tooltip-border solid transparent;
    border-bottom: 0;
    border-left: $tooltip-border solid transparent;
  }

  &.bottom:after{
    top: -$tooltip-border;
    border-top: 0;
    border-right: $tooltip-border solid transparent;
    border-bottom: $tooltip-border solid $white;
    border-left: $tooltip-border solid transparent;
  }
  &.left:after{
    margin-right: 0;
    right: -$tooltip-border;
    top: $tooltip-top-border-pos;
    border-top: $tooltip-border solid transparent;
    border-bottom: $tooltip-border solid transparent;
    border-left: $tooltip-border solid $white;
  }
  &.right:after{
    margin-left: 0;
    left: -$tooltip-border;
    top: $tooltip-top-border-pos;
    border-top: $tooltip-border solid transparent;
    border-bottom: $tooltip-border solid transparent;
    border-right: $tooltip-border solid $white;
  }
}

